# era-contracts

./: .codespellrc  .editorconfig  .eslintrc  .gitignore  .gitmodules  .lycheeignore  .markdownlintignore  .prettierignore  .prettierrc.js  .solhint.json  .solhintignore  AGENTS.md  AllContractsHashes.json  CODEOWNERS  CONTRIBUTING.md  DUMMY_FILE.md  README.md  SECURITY.md  SystemConfig.json  SystemContractsHashes.json  TEST_NODE_BRANCH.md  _typos.toml  agent_review_report.md  auto-update.txt  change.txt  contracts-review-prep.md  cspell.json  findings_contracts.md  hardhat.config.ts  kek.out  out.txt  package-lock.json  package.json  protocol-ops.sh  recompute_hashes.sh  tsconfig.json  v31-test-followups.md  verify-contracts.sh  zksync-os-genesis.json
.codespell/: .codespellrc  (+1 more)
protocol-cli/crates/cli/: Cargo.toml
protocol-cli/crates/cli/src/: abi.rs  admin_functions.rs  forge_ctx.rs  main.rs
protocol-cli/crates/cli/src/commands/: execute.rs  mod.rs  plan.rs
protocol-cli/crates/cli/src/planner/: builder.rs  mod.rs  simulator.rs
protocol-cli/crates/cli/src/utils/: build.rs  display.rs  forge.rs  mod.rs  paths.rs  runlog.rs
protocol-cli/crates/types/: Cargo.toml
protocol-cli/crates/types/src/: commitment.rs  conversions.rs  lib.rs  plan.rs
protocol-ops/: Cargo.toml  README.md
protocol-ops/crates/cli/: Cargo.toml
protocol-ops/crates/cli/src/: admin_functions.rs  forge_ctx.rs  main.rs
protocol-ops/crates/cli/src/utils/: build.rs  forge.rs  runlog.rs
protocol-ops/crates/common/: Cargo.toml
protocol-ops/crates/common/src/: anvil.rs  config.rs  contracts.rs  ethereum.rs  lib.rs
protocol-ops/crates/common/src/forge/: runner.rs  script.rs
protocol-ops/crates/common/src/term/: mod.rs
protocol-ops/crates/config/: Cargo.toml
protocol-ops/crates/config/src/: contracts.rs  lib.rs  traits.rs  wallets.rs
protocol-ops/crates/config/src/forge_interface/: mod.rs
protocol-ops/crates/types/: Cargo.toml
protocol-ops/crates/types/src/: chain_id.rs  protocol_version.rs
protocol-ops/src/: abi.rs  abi_contracts.rs  admin_functions.rs  forge_ctx.rs  main.rs
protocol-ops/src/commands/: mod.rs  output.rs
protocol-ops/src/commands/chain/: admin_call_builder.rs  convert_to_gateway.rs  deploy_admin.rs  deploy_gateway_transaction_filterer.rs  dump_gateway_force_deployments.rs  execute_simulated_transactions.rs  finalize_migration_to_gateway.rs  init.rs  migrate_to_gateway.rs  mod.rs  set_da_validator_pair.rs  set_upgrade_timestamp.rs  upgrade.rs  validator.rs
protocol-ops/src/commands/chain/gateway/: convert.rs  migrate.rs  migrate_from.rs  migrate_to.rs  mod.rs
protocol-ops/src/commands/ctm/: accept_ownership.rs  deploy.rs  init.rs  mod.rs  upgrade.rs
protocol-ops/src/commands/dev/: execute_safe.rs  execute_transactions.rs  mod.rs
protocol-ops/src/commands/ecosystem/: deploy_create2.rs  init.rs  mod.rs  puh_guardians.rs  simulator.rs  stage3.rs  sync_runtime_contracts.rs  upgrade.rs  v31_upgrade_full.rs  v31_upgrade_inner.rs  verify_upgrade.rs
protocol-ops/src/commands/genesis/: gen.rs  mod.rs
protocol-ops/src/commands/hub/: accept_ownership.rs  deploy.rs  init.rs  mod.rs  register_chain.rs  register_ctm.rs  upgrade.rs
protocol-ops/src/common/: addresses.rs  anvil.rs  args.rs  cmd.rs  constants.rs  contracts.rs  ecosystem.rs  env_config.rs  ethereum.rs  governance_calls.rs  l1_contracts.rs  mod.rs  paths.rs  traits.rs  versions.rs  wallets.rs
protocol-ops/src/common/forge/: cast_transactions.rs  ctx.rs  mod.rs  runner.rs  script.rs
protocol-ops/src/common/term/: error.rs  logger.rs  mod.rs
protocol-ops/src/config/: consts.rs  contracts.rs  mod.rs  traits.rs  wallets.rs
protocol-ops/src/config/forge_interface/: mod.rs  paymaster.rs  permanent_values.rs  script_params.rs
protocol-ops/src/config/forge_interface/accept_ownership/: mod.rs
protocol-ops/src/config/forge_interface/deploy_chain_admin/: input.rs  output.rs
protocol-ops/src/config/forge_interface/deploy_ctm/: input.rs  output.rs
protocol-ops/src/config/forge_interface/deploy_ecosystem/: input.rs  output.rs
protocol-ops/src/config/forge_interface/deploy_l2_contracts/: input.rs  output.rs
protocol-ops/src/config/forge_interface/register_chain/: input.rs  output.rs
protocol-ops/src/types/: chain_id.rs  commitment.rs  l1_network.rs  mod.rs  protocol_version.rs  vm_option.rs
protocol-ops/src/upgrade_verification/: artifact_shape.rs  artifacts.rs  governance_calls.rs  hex.rs  mod.rs  report.rs  verifiers.rs
protocol-ops/src/upgrade_verification/versions/: mod.rs  v31.rs
protocol-ops/src/upgrade_verification/versions/v31/: mod.rs
protocol-ops/src/utils/: build.rs  forge.rs  mod.rs  paths.rs  runlog.rs
system-contracts/bootloader/test_infra/: Cargo.toml  README.md  rust-toolchain
system-contracts/bootloader/test_infra/src/: example_tx.rs  hook.rs  main.rs  test_count_tracer.rs  tracer.rs  transaction_generator.rs
system-contracts/bootloader/test_infra/src/test_transactions/: 0.json  1.json  README.md
system/bootloader/test_infra/: Cargo.toml
system/bootloader/test_infra/src/: hook.rs  main.rs
tools/: Cargo.toml  Jesus Christ Judah  README.md  rust-toolchain.toml
tools/data/: fflonk_scheduler_key.json  fflonk_verifier_contract_template.txt  plonk_scheduler_key.json  plonk_verifier_contract_template.txt  scheduler_key.json  verifier_contract_template.txt
tools/src/: fflonk.rs  main.rs  plonk.rs  types.rs  utils.rs
tools/upgrade-readiness-checker/: Cargo.toml  README.md
tools/upgrade-readiness-checker/src/: abi.rs  main.rs  readiness.rs  upgrade.rs
tools/verifier-gen/: Cargo.toml  README.md
tools/verifier-gen/data/: ZKsyncOS_plonk_scheduler_key.json  ZiSK_vk.json  plonk_verifier_contract_template.txt  zisk_verifier_contract_template.txt
tools/verifier-gen/src/: fflonk.rs  main.rs  plonk.rs  utils.rs  zisk.rs
tools/wallets-gen/: Cargo.toml
tools/wallets-gen/src/: main.rs
tools/zksync-os-genesis-gen/: Cargo.toml  rust-toolchain.toml  zksync-os-genesis.component.md
tools/zksync-os-genesis-gen/src/: consts.rs  genesis.rs  main.rs  types.rs  utils.rs
(+4339 files in other folders)
