[workspace]
members = [
  "crates/cli",
  "crates/common",
  "crates/config",
  "crates/types",
]
resolver = "2"

[workspace.package]
version = "0.2.1" # x-release-please-version
edition = "2021"
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
exclude = ["./github"]
repository = "https://github.com/matter-labs/era-contracts/tree/main/protocol-cli/"
description = "Protocol CLI is a set of tools for working with ZKSync contracts."
keywords = ["zk", "cryptography", "protocol", "blockchain", "ZKSync OS", "ZKsync", "EraVM"]

[workspace.dependencies]
# Local
protocol_ops_common = { version = "=0.2.1", path = "crates/common" }
protocol_ops_config = { version = "=0.2.1", path = "crates/config" }
protocol_ops_types = { version = "=0.2.1", path = "crates/types" }
# External
alloy = "1.0"
anyhow = "1.0.82"
async-trait = "0.1.68"
chrono = "0.4.38"
clap = { version = "4.4", features = ["derive", "wrap_help", "string"] }
clap_complete = "4.5.33"
clap-markdown = "0.1.4"
cliclack = "0.2.5"
console = "0.15.8"
dirs = "5.0.1"
ethers = "2.0"
futures = "0.3.30"
human-panic = "2.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
prost = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking"] }
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1"
serde_yaml = "0.9"
sha2 = "0.10.6"
slugify-rs = "0.0.3"
sqruff-lib = "0.19.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.4.0"
xshell = "0.2.6"

[profile.release]
strip = true
