[package]
name = "zksync_verifier_contract_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync_crypto = { git = "https://github.com/matter-labs/era-boojum-validator-cli", branch = "main", package = "crypto" }
circuit_definitions = {git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch="v1.5.0"}

serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
structopt = "0.3.26"
handlebars = "4.4.0"
sha3 = "0.10.8"
hex = "0.4.3"

[workspace]
