[package]
name = "zksync_verifier_contract_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync_crypto = { git = "https://github.com/matter-labs/era-boojum-validator-cli", branch = "main", package = "crypto" }
circuit_definitions = "0.151.3"
zksync_solidity_vk_codegen = "=0.31.0"

serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
structopt = "0.3.26"
handlebars = "4.4.0"
sha3 = "0.10.8"
hex = "0.4.3"

[[bin]]
name = "zksync_verifier_contract_generator"
path = "src/main.rs"

[[bin]]
name = "serialize_test_proof"
path = "src/bin/serialize_test_proof.rs"

[workspace]
