[package]
name = "zksync-os-genesis-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
structopt = "0.3.26"
zksync_os_interface = { version = "0.0.7" }

alloy = { version = "1.0.38", default-features = false, features = ["consensus", "sol-types", "eips", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10.6"
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26" }

anyhow = "1"
hex = "0.4"
hex-literal = "1.0.0"

# Use workspace to allow using the tool from other workspaces without conflicts
[workspace]
