[package]
name = "protocol_cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
# Local
protocol_cli_common.workspace = true
protocol_cli_config.workspace = true
protocol_cli_types.workspace = true
# External
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap_complete.workspace = true
clap-markdown.workspace = true
clap.workspace = true
cliclack.workspace = true
dirs.workspace = true
ethers.workspace = true
futures.workspace = true
human-panic.workspace = true
lazy_static.workspace = true
prost.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
sha2.workspace = true
slugify-rs.workspace = true
sqruff-lib.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
walkdir.workspace = true
xshell.workspace = true

[build-dependencies]
anyhow.workspace = true
clap_complete.workspace = true
dirs.workspace = true
ethers.workspace = true
xshell.workspace = true
