[package]
name = "protocol_ops_config"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
# Local
protocol_ops_common.workspace = true
protocol_ops_types.workspace = true
# External
anyhow.workspace = true
clap.workspace = true
ethers.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
xshell.workspace = true
