[package]
name = "test_infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zksync_multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }
zksync_vlog = { git = "https://github.com/matter-labs/zksync-era.git", rev = "b6e3809fc82e809692a1ece6aaf1591fc5169a0d" }

colored = "2.0"
hex = "0.4"
once_cell = "1.7"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json"] }
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
vise = { git = "https://github.com/matter-labs/vise.git", rev = "51669f42f60c50b3a521662a4ecd71212a303299" }
