[package]
name = "test_infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zksync_multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }
zksync_vlog = { git = "https://github.com/matter-labs/zksync-era.git", rev = "f5e2835e37f0157b4b77dc743025b354aa798f10" }

zk_evm_abstractions = "0.153.6"
colored = "2.0"
rlp = "0.5"
hex = "0.4"
once_cell = "1.7"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json"] }
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
# Pin zerocopy below 0.8.39 to avoid stdarch_x86_avx512 unstable feature on nightly-2025-05-23
zerocopy = ">=0.8, <0.8.39"

[patch.crates-io]
vise = { git = "https://github.com/matter-labs/vise.git", rev = "8d800385a108eb598cbaa6c8bc8ab4ef3bf69011" }
